File storage tested