@@ -14,23 +14,17 @@ import io.camunda.connector.filestorage.FileStorageInput;
 import io.camunda.connector.filestorage.FileStorageOutput;
 import io.camunda.connector.filestorage.toolbox.FileRunnerParameter;
 import io.camunda.connector.filestorage.toolbox.FileStorageSubFunction;
-import io.camunda.connector.filestorage.upload.UploadFile;
 import io.camunda.filestorage.FileRepoFactory;
 import io.camunda.filestorage.FileVariableReference;
-import io.camunda.filestorage.StorageDefinition;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public class DeleteFile implements FileStorageSubFunction {
   private final Logger logger = LoggerFactory.getLogger(DeleteFile.class.getName());
-
-
-
 
   public DeleteFile() {
   }
@@ -45,18 +39,19 @@ public class DeleteFile implements FileStorageSubFunction {
   }
 
   public String getSubFunctionType() {
-    return "upload";
+    return "delete";
   }
-
 
   @Override
   public FileStorageOutput executeSubFunction(FileStorageInput input,
                                               OutboundConnectorContext outboundConnectorContext) {
+    StringBuilder traceExecution = new StringBuilder();
+    traceExecution.append("---DeleteFile:");
 
-    FileVariableReference fileVariable;
+    FileVariableReference fileVariableReference;
     try {
-      fileVariable = FileVariableReference.fromJson(input.getSourceFile());
-    } catch(Exception e) {
+      fileVariableReference = FileVariableReference.fromJson(input.getSourceFile());
+    } catch (Exception e) {
       throw new ConnectorException(FileStorageError.BPMNERROR_ACCESS_FILEVARIABLE,
           "Worker [" + getSubFunctionName() + "] error during access fileVariableReference[" + input.getSourceFile()
               + "] :" + e);
@@ -64,38 +59,44 @@ public class DeleteFile implements FileStorageSubFunction {
     FileStorageOutput output = new FileStorageOutput();
     try {
       FileRepoFactory fileRepoFactory = FileRepoFactory.getInstance();
+      traceExecution.append("StorageDefinition[");
+      traceExecution.append(fileVariableReference.getStorageDefinition());
+      traceExecution.append("] ");
 
-      boolean filePurged = fileRepoFactory.purgeFileVariable(fileVariable);
+      boolean filePurged = fileRepoFactory.purgeFileVariable(fileVariableReference);
+      traceExecution.append("Purged[");
+      traceExecution.append(filePurged);
+      traceExecution.append("]");
 
-      output.fileIsPurged= filePurged;
+      output.fileIsPurged = filePurged;
+      output.nbFilesProcessed = 1;
+
     } catch (Exception e) {
       logger.error("Can't purge file " + e);
-      output.fileIsPurged= false;
+      output.fileIsPurged = false;
       throw new ConnectorException(FileStorageError.BPMNERROR_INCORRECT_FILESTORAGE,
-          "Worker [" + getSubFunctionName() + "] File[" + fileVariable.content + "] can't purge");
+          "Worker [" + getSubFunctionName() + "] FileReference[" + fileVariableReference.content + "] can't purge");
     }
-return output;
+    logger.info(traceExecution.toString());
+
+    return output;
   }
 
   public List<FileRunnerParameter> getInputsParameter() {
-    return Arrays.asList(
-    (FileRunnerParameter) new FileRunnerParameter(FileStorageInput.INPUT_SOURCE_FILE,
-        "Source file",
-        String.class,
-        RunnerParameter.Level.REQUIRED,
-        "FileVariable used to delete", 1));
+    return List.of(new FileRunnerParameter(FileStorageInput.INPUT_SOURCE_FILE, "Source file", String.class,
+        RunnerParameter.Level.REQUIRED, "FileVariable used to delete", 1));
   }
 
-  public List<FileRunnerParameter> getOutputsParameter(){
-    return Arrays.asList(new FileRunnerParameter(FileStorageOutput.OUTPUT_FILE_IS_PURGED, "File purged",
-        Object.class,
-        RunnerParameter.Level.REQUIRED,
-        "True if the file is correctly purge, or didn't exist"));
+  public List<FileRunnerParameter> getOutputsParameter() {
+    return Arrays.asList(new FileRunnerParameter(FileStorageOutput.OUTPUT_FILE_IS_PURGED, "File purged", Object.class,
+            RunnerParameter.Level.REQUIRED, "True if the file is correctly purge, or didn't exist"),
+        new FileRunnerParameter(FileStorageOutput.OUTPUT_NB_FILES_PROCESSED, "Nb files processed", String.class,
+            RunnerParameter.Level.OPTIONAL, "Number of files processed. May be 1 or 0 (no file found)"));
 
   }
 
   public Map<String, String> getBpmnErrors() {
-    return Map.of(FileStorageError.BPMNERROR_ACCESS_FILEVARIABLE,FileStorageError.BPMNERROR_ACCESS_FILEVARIABLE_EXPL,
+    return Map.of(FileStorageError.BPMNERROR_ACCESS_FILEVARIABLE, FileStorageError.BPMNERROR_ACCESS_FILEVARIABLE_EXPL,
 
         FileStorageError.BPMNERROR_INCORRECT_FILESTORAGE, FileStorageError.BPMNERROR_INCORRECT_FILESTORAGE_EXPL);
 
